Simple chess clock Web Based

--- a/chessv2.css
+++ b/chessv2.css
@@ -170,6 +170,18 @@ input{
     
 }
 
+#chess_step2 h3{
+    text-align: center;
+    font-weight: 550;
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
+
+
+#customize_time input{
+    margin-bottom: 10px;
+}
+
 
 #chess_step1.show, #chess_step2.show, #chess_step3.show, #customize_time.show{
     height: auto;
